# gitpro

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs  routes.rs
src/components/: topbar.rs
src/providers/: git_helper.rs  git_helper_old.rs  login.rs  mod.rs
src/providers/login/: api.rs  checklogin.rs  mod.rs  tokenhandler.rs  webserver.rs
src/views/: home.rs  login.rs  menu.rs  mod.rs  push.rs
