[package]
name = "gitpro"
version = "0.1.0"
authors = ["nichehlikes15"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
git2 = "0.20.4"
url = "2.5.8"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
