[package]
name = "gitpro"
version = "0.1.0"
authors = ["nichehlikes15"]
edition = "2021"

[dependencies]
axum = "0.8.8"
dioxus = { version = "0.7.3", features = ["router"] }
git2 = "0.20.4"
octocrab = { version = "0.49.5", features = [] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
url = "2.5.8"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
